# pixel-journey

./: .gitignore  CMakeLists.txt  README.md
cmake/: compiler_options.cmake  cxx_modules.cmake  dependencies.cmake  source_files.cmake  toolchain.cmake
docs/: vulkan-hello.md
script/: build.py  build_gn_args.sh
src/: main.cpp
src/configuration/: common_config.ixx  configuration.ixx  vulkan_config.ixx
src/glfw/: glfw.ixx  glfw_api.cppm  glfw_api.ixx  glfw_context.ixx  glfw_window.cppm  glfw_window.ixx
src/skia/: skia.font.ixx  skia.ixx
src/skia/api/: skia_api.ixx  skia_api_core.ixx  skia_api_utils.ixx
src/skia/resource/: skia.font.ixx  skia_color.ixx  skia_font.ixx  skia_resource.ixx
src/ui/: ui.cppm  ui.ixx
src/ui/animation/: animation.cppm  animation_manager.cppm  core.cppm  frame_clock.cppm  linear_animation.cppm
src/ui/control/: button.ixx  controls.ixx
src/ui/core/: core.ixx  rect_transform.ixx
src/ui/layout/: layout.cppm  layout.ixx
src/ui/render/: render.cppm  render.ixx  render_background.cppm  render_base.cppm  render_base.ixx  render_border.cppm  render_border.ixx  render_svg.cppm  render_text.cppm  render_text.ixx
src/ui/widgets/: button.ixx  controls.ixx  hit_test_grid.ixx  widget_base.ixx  widget_mouse_grid.ixx  widget_tree.ixx  (+2 more)
src/utils/: enum_utils.ixx  math.ixx  signal.cppm  yuri_log.ixx
src/vulkan/: vulkan.ixx  vulkan_api.ixx  vulkan_context.cppm  vulkan_context.ixx  vulkan_device.ixx  vulkan_instance.ixx  vulkan_swapchain.ixx
test/: CMakeLists.txt  reflection.cpp  vulkan_hello.cpp
test/validation-html/: 主页.html
(+25 files in other folders)
